--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -33,9 +33,9 @@ android {
         main.java.srcDirs += 'src/main/kotlin'
     }
 
-    lintOptions {
+   /* lintOptions {
         disable 'InvalidPackage'
-    }
+    }*/
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
