--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -39,7 +39,8 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.primacyinfotech.mstore"
+        //applicationId "com.primacyinfotech.mstore"
+        applicationId "delfastuser.primacyinfotech.com"
         minSdkVersion 20
         targetSdkVersion 30
         versionCode 1
