--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -26,7 +26,8 @@
         android:hardwareAccelerated="true"
         android:icon="@drawable/icon"
         android:roundIcon="@drawable/icon"
-        tools:ignore="UnusedAttribute">
+        tools:ignore="UnusedAttribute"
+        tools:replace="android:label">
        <!-- android:icon="@mipmap/launcher_icon"
         android:roundIcon="@mipmap/launcher_icon"-->
 
