--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -17,7 +17,6 @@
         android:name="com.primacyinfotech.mstore.permission.MAPS_RECEIVE"
         android:protectionLevel="signature" />
     <application
-        android:name="io.flutter.app.FlutterApplication"
         android:label="@string/app_name"
         android:allowBackup="false"
         android:fullBackupContent="false"
@@ -28,8 +27,8 @@
         android:roundIcon="@drawable/icon"
         tools:ignore="UnusedAttribute"
         tools:replace="android:label">
-       <!-- android:icon="@mipmap/launcher_icon"
-        android:roundIcon="@mipmap/launcher_icon"-->
+        <!-- android:icon="@mipmap/launcher_icon"
+         android:roundIcon="@mipmap/launcher_icon"-->
 
         <activity
             android:name=".MainActivity"
@@ -39,15 +38,16 @@
             android:hardwareAccelerated="true"
             android:showWhenLocked="true"
             android:turnScreenOn="true"
+            android:exported="true"
             android:windowSoftInputMode="adjustResize">
             <meta-data
-              android:name="io.flutter.embedding.android.NormalTheme"
-              android:resource="@style/NormalTheme"
-              />
+                android:name="io.flutter.embedding.android.NormalTheme"
+                android:resource="@style/NormalTheme"
+                />
             <meta-data
-              android:name="io.flutter.embedding.android.SplashScreenDrawable"
-              android:resource="@drawable/splashscreen"
-              />
+                android:name="io.flutter.embedding.android.SplashScreenDrawable"
+                android:resource="@drawable/splashscreen"
+                />
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
@@ -71,7 +71,8 @@
             android:name="com.google.firebase.messaging.default_notification_channel_id"
             android:value="@string/default_notification_channel_id" />
         <receiver android:name="com.dexterous.flutterlocalnotifications.ScheduledNotificationReceiver" />
-        <receiver android:name="com.dexterous.flutterlocalnotifications.ScheduledNotificationBootReceiver">
+        <receiver android:name="com.dexterous.flutterlocalnotifications.ScheduledNotificationBootReceiver"
+            android:exported="false">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED"/>
             </intent-filter>
