--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,7 @@ dependencies:
   flutter_phoenix: ^0.1.0
   country_code_picker: ^1.3.15
   grouped_buttons: ^1.0.4
-  google_fonts: ^2.0.0
+  google_fonts: 2.0.0
   image_auto_slider: ^0.0.3
   image_slider: ^1.0.2
   pin_code_text_field: ^1.7.1
@@ -52,16 +52,16 @@ dependencies:
   google_maps_flutter: ^2.0.2
   flutter_google_places: ^0.3.0
   flutter_local_notifications: ^5.0.0+1
-  firebase_messaging: ^10.0.1
+  firebase_messaging: 10.0.1
   sqflite: ^1.3.1+1
   progress_dialog: ^1.2.4
   image_picker: ^0.7.4
-  flutter_datetime_picker: ^1.5.0
+  flutter_datetime_picker: 1.5.0
   flutter_html: ^1.3.0
   fbutton: ^2.0.1
   flutter_bloc: ^6.0.1
-  firebase_auth: ^1.3.0
-  firebase_core : ^1.2.1
+  firebase_auth: 1.3.0
+  firebase_core : 1.2.1
   http: ^0.13.1
   flutter_credit_card: ^2.0.0
   pdf: ^3.1.0
@@ -70,11 +70,11 @@ dependencies:
   mapbox_search: ^2.1.0+1
   http_auth: ^1.0.0
   smooth_star_rating: 1.1.1
-  flutter_rating_bar: ^4.0.0
-  cashfree_pg: 1.2.5+22
+  flutter_rating_bar: ^3.2.0
+  cashfree_pg: ^2.0.7+27
   flutter_tawk: ^0.0.5
-  webview_flutter: ^1.0.7
-  flutter_webview_plugin: ^0.3.5
+  webview_flutter: 1.0.7
+  flutter_webview_plugin: 0.3.11
 
 #dependency_overrides:
 #  intl: any
@@ -93,7 +93,7 @@ dev_dependencies:
 flutter_icons:
   android: "launcher_icon"
   ios: true
-  image_path: "images/logos/logo_user.png"
+  image_path: "images/logos/logo_user1.png"
 
 flutter:
 
