--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,7 +55,9 @@ dependencies:
   firebase_messaging: 10.0.1
   sqflite: ^1.3.1+1
   progress_dialog: ^1.2.4
-  image_picker: ^0.7.4
+  image_picker: ^0.8.4
+  gallery_saver: ^2.3.2
+  image: ^3.0.0
   flutter_datetime_picker: 1.5.0
   flutter_html: ^1.3.0
   fbutton: ^2.0.1
@@ -75,6 +77,8 @@ dependencies:
   flutter_tawk: ^0.0.5
   webview_flutter: 1.0.7
   flutter_webview_plugin: 0.3.11
+  lazy_load_scrollview: ^1.3.0
+  material_dialogs: ^1.1.1
 
 #dependency_overrides:
 #  intl: any
