--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -79,6 +79,7 @@ dependencies:
   flutter_webview_plugin: 0.3.11
   lazy_load_scrollview: ^1.3.0
   material_dialogs: ^1.1.1
+  platform_device_id: ^1.0.1
 
 #dependency_overrides:
 #  intl: any
